@@ -118,7 +118,7 @@ DISTCLEANFILES = fnmatch.h
 
 all-local c-ctype.lo execute.lo javacomp.lo javaexec.lo pipe-bidi.lo pipe-in.lo pipe-out.lo progname.lo tmpdir.lo wait-process.lo xerror.lo: @STDBOOL_H@
 stdbool.h: stdbool.h.in
-	cp $(srcdir)/stdbool.h.in stdbool.h
+	sed -e 's/@''HAVE__BOOL''@/@HAVE__BOOL@/g' < $(srcdir)/stdbool.h.in > stdbool.h
 MOSTLYCLEANFILES = @STDBOOL_H@
 
 
