@@ -1,3 +1,8 @@
+2002-04-30  Bruno Haible  <bruno@clisp.org>
+
+	* stdbool.m4 (gt_STDBOOL_H): If <stdbool.h> does not exist, check for
+	_Bool as a builtin primitive type. Needed for cc on OSF/1 5.1.
+
 2002-04-24  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-0.11.2 released.
