@@ -1,3 +1,9 @@
+2002-04-30  Bruno Haible  <bruno@clisp.org>
+
+	* stdbool.h.in (_Bool): Omit the definition if _Bool is already known
+	as a builtin primitive type. Needed for cc on OSF/1 5.1.
+	* Makefile.am (stdbool.h): Substitute the value of HAVE__BOOL.
+
 2002-04-26  Bruno Haible  <bruno@clisp.org>
 
 	* basename.h: Use __GLIBC__ instead of __GNU_LIBRARY__, because
